# notebooklm-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py
examples/: basic_usage.py
notebooklm/: cli.py  document.py  notebook.py
