[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "notebooklm-py"
version = "0.1.0"
description = "Local NotebookLM-like tool — chat with your documents using Claude"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
notebooklm = "notebooklm.cli:app"
